Fix press contact form title text-align:center inherited from press css
# Veuillez saisir le message de validation pour vos modifications. Les lignes
# commençant par '#' seront ignorées, et un message vide abandonne la validation.
# Sur la branche master
# Votre branche est à jour avec 'origin/master'.
#
# Modifications qui seront validées :
#	modifié :         src/AymardBundle/Resources/public/css/contact-modal.css
#

--- a/src/AymardBundle/Resources/public/css/contact-modal.css
+++ b/src/AymardBundle/Resources/public/css/contact-modal.css
@@ -7,6 +7,7 @@
 
 #contact {
     padding:25px;
+    text-align: justify;
 }
 
 .modal-remove {
